# fastspider

./: .gitignore  engine.py  main.py  netutil.py  pipeline.py  pyproject.toml  settings.py  test.json  test.py  test.txt  test2.py  utils.py
bench/: confluent.py  consumer_test.py  redis-test.py  redis-test2.py  test.py
core/: downloader.py  queue.py  scheduler.py
example/: pipeline.py  spider.py  testitem.py
fastspider/: engine.py  loader.py  pipeline.py  settings.py  utils.py
fastspider/core/: downloader.py  engine.py  queue.py  scheduler.py
fastspider/models/: __init__.py  request.py  response.py
fastspider/queue/: queue.py  redisqueue.py
models/: __init__.py  item.py  request.py  response.py  serialize.py
spider/: loader.py  spider.py
tests/: test_request.py  testitem.py  testpipeline.py  testspider.py
tests/bench/: mq.py  pipe.py  queue.py  queues.py
