[tool.poetry]
name = "fastcrawler"
version = "0.1.0"
description = ""
authors = ["dream2333 <vincentqng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
uvloop = "^0.17.0"
orjson = "^3.9.1"
loguru = "^0.7.0"
parsel = "^1.8.1"
msgspec = "^0.16.0"
aiokafka = "^0.8.1"


[tool.poetry.group.dev.dependencies]
memray = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
