[tool.poetry]
name = "fastspider"
version = "0.1.0"
description = ""
authors = ["dream2333 <vincentqng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
orjson = "^3.9.1"
loguru = "^0.7.0"
parsel = "^1.8.1"
msgspec = "^0.16.0"
aiohttp = "^3.8.4"
aiodns = "^3.0.0"
faust-cchardet = "^2.1.18"
brotli = "^1.0.9"
redis = { extras = ["hiredis"], version = "^4.5.5" }

[tool.poetry.group.unix.dependencies]
uvloop = { version = "^0.17.0", platform = 'linux' }

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
